--- a/Rice Thresher Purity Test.html
+++ b/Rice Thresher Purity Test.html
@@ -96,107 +96,202 @@
         <p></p>
             <div id="list">
                 <ol>
-                    <li> <input type="checkbox" id="1"> Held hands romantically?
-                    </li><li> <input type="checkbox" id="2"> Been on a date?
-                    </li><li> <input type="checkbox" id="3"> Been in a relationship?
-                    </li><li> <input type="checkbox" id="4"> Danced without leaving room for Jesus?
-                    </li><li> <input type="checkbox" id="5"> Kissed a non-family member?
-                    </li><li> <input type="checkbox" id="6"> Kissed a non-family member on the lips?
-                    </li><li> <input type="checkbox" id="7"> French kissed?
-                    </li><li> <input type="checkbox" id="8"> French kissed in public?
-                    </li><li> <input type="checkbox" id="9"> Kissed on the neck?
-                    </li><li> <input type="checkbox" id="10"> Kissed horizontally?
-                    </li><li> <input type="checkbox" id="11"> Given or received a hickey?
-                    </li><li> <input type="checkbox" id="12"> Kissed or been kissed on the breast?
-                    </li><li> <input type="checkbox" id="13"> Kissed someone below the belt?
-                    </li><li> <input type="checkbox" id="14"> Kissed for more than two hours consecutively?
-                    </li><li> <input type="checkbox" id="15"> Played a game involving stripping?
-                    </li><li> <input type="checkbox" id="16"> Seen or been seen by another person in a sensual context?
-                    </li><li> <input type="checkbox" id="17"> Masturbated?
-                    </li><li> <input type="checkbox" id="18"> Masturbated to a picture or video?
-                    </li><li> <input type="checkbox" id="19"> Masturbated while someone else was in the room?
-                    </li><li> <input type="checkbox" id="20"> Been caught masturbating?
-                    </li><li> <input type="checkbox" id="21"> Masturbated with an inanimate object?
-                    </li><li> <input type="checkbox" id="22"> Seen or read pornographic material?
-                    </li><li> <input type="checkbox" id="23"> Massaged or been massaged sensually?
-                    </li><li> <input type="checkbox" id="24"> Gone through the motions of intercourse while fully dressed?
-                    </li><li> <input type="checkbox" id="25"> Undressed or been undressed by a MPS (member of the preferred sex)?
-                    </li><li> <input type="checkbox" id="26"> Showered with a MPS?
-                    </li><li> <input type="checkbox" id="27"> Fondled or had your butt cheeks fondled?
-                    </li><li> <input type="checkbox" id="28"> Fondled or had your breasts fondled?
-                    </li><li> <input type="checkbox" id="29"> Fondled or had your genitals fondled?
-                    </li><li> <input type="checkbox" id="30"> Had or given “blue balls”?
-                    </li><li> <input type="checkbox" id="31"> Had an orgasm due to someone else’s manipulation?
-                    </li><li> <input type="checkbox" id="32"> Sent a sexually explicit text or instant message?
-                    </li><li> <input type="checkbox" id="33"> Sent or received sexually explicit photographs?
-                    </li><li> <input type="checkbox" id="34"> Engaged in sexually explicit activity over video chat?
-                    </li><li> <input type="checkbox" id="35"> Cheated on a significant other during a relationship?
-                    </li><li> <input type="checkbox" id="36"> Purchased contraceptives?
-                    </li><li> <input type="checkbox" id="37"> Gave oral sex?
-                    </li><li> <input type="checkbox" id="38"> Received oral sex?
-                    </li><li> <input type="checkbox" id="39"> Ingested someone else’s genital secretion?
-                    </li><li> <input type="checkbox" id="40"> Used a sex toy with a partner?
-                    </li><li> <input type="checkbox" id="41"> Spent the night with a MPS?
-                    </li><li> <input type="checkbox" id="42"> Been walked in on while engaging in a sexual act?
-                    </li><li> <input type="checkbox" id="43"> Kicked a roommate out to commit a sexual act?
-                    </li><li> <input type="checkbox" id="44"> Ingested alcohol in a non-religious context?
-                    </li><li> <input type="checkbox" id="45"> Played a drinking game?
-                    </li><li> <input type="checkbox" id="46"> Been drunk?
-                    </li><li> <input type="checkbox" id="47"> Faked sobriety to parents or teachers?
-                    </li><li> <input type="checkbox" id="48"> Had severe memory loss due to alcohol?
-                    </li><li> <input type="checkbox" id="49"> Used tobacco?
-                    </li><li> <input type="checkbox" id="50"> Used marijuana?
-                    </li><li> <input type="checkbox" id="51"> Used a drug stronger than marijuana?
-                    </li><li> <input type="checkbox" id="52"> Used methamphetamine, crack cocaine, PCP, horse tranquilizers or heroin?
-                    </li><li> <input type="checkbox" id="53"> Been sent to the office of a principal, dean or judicial affairs representative for a disciplinary infraction?
-                    </li><li> <input type="checkbox" id="54"> Been put on disciplinary probation or suspended?
-                    </li><li> <input type="checkbox" id="55"> Urinated in public?
-                    </li><li> <input type="checkbox" id="56"> Gone skinny-dipping?
-                    </li><li> <input type="checkbox" id="57"> Gone streaking?
-                    </li><li> <input type="checkbox" id="58"> Seen a stripper?
-                    </li><li> <input type="checkbox" id="59"> Had the police called on you?
-                    </li><li> <input type="checkbox" id="60"> Run from the police?
-                    </li><li> <input type="checkbox" id="61"> Had the police question you?
-                    </li><li> <input type="checkbox" id="62"> Had the police handcuff you?
-                    </li><li> <input type="checkbox" id="63"> Been arrested?
-                    </li><li> <input type="checkbox" id="64"> Been convicted of a crime?
-                    </li><li> <input type="checkbox" id="65"> Been convicted of a felony?
-                    </li><li> <input type="checkbox" id="66"> Committed an act of vandalism?
-                    </li><li> <input type="checkbox" id="67"> Had sexual intercourse?
-                    </li><li> <input type="checkbox" id="68"> Had sexual intercourse three or more times in one night?
-                    </li><li> <input type="checkbox" id="69"> ?
-                    </li><li> <input type="checkbox" id="70"> Had sexual intercourse 10 or more times?
-                    </li><li> <input type="checkbox" id="71"> Had sexual intercourse in four or more positions?
-                    </li><li> <input type="checkbox" id="72"> Had sexual intercourse with a stranger or person you met within 24 hours?
-                    </li><li> <input type="checkbox" id="73"> Had sexual intercourse in a motor vehicle?
-                    </li><li> <input type="checkbox" id="74"> Had sexual intercourse outdoors?
-                    </li><li> <input type="checkbox" id="75"> Had sexual intercourse in public?
-                    </li><li> <input type="checkbox" id="76"> Had sexual intercourse in a swimming pool or hot tub?
-                    </li><li> <input type="checkbox" id="77"> Had sexual intercourse in a bed not belonging to you or your partner?
-                    </li><li> <input type="checkbox" id="78"> Had sexual intercourse while you or your partner’s parents were in the same home?
-                    </li><li> <input type="checkbox" id="79"> Had sexual intercourse with non-participating third party in the same room?
-                    </li><li> <input type="checkbox" id="80"> Joined the mile high club?
-                    </li><li> <input type="checkbox" id="81"> Participated in a “booty call” with a partner whom you were not in a relationship with?
-                    </li><li> <input type="checkbox" id="82"> Traveled 100 or more miles for the primary purpose of sexual intercourse?
-                    </li><li> <input type="checkbox" id="83"> Had sexual intercourse with a partner with a 3 or more year age difference?
-                    </li><li> <input type="checkbox" id="84"> Had sexual intercourse with a virgin?
-                    </li><li> <input type="checkbox" id="85"> Had sexual intercourse without a condom?
-                    </li><li> <input type="checkbox" id="86"> Had a STI test due to reasonable suspicion?
-                    </li><li> <input type="checkbox" id="87"> Had a STI?
-                    </li><li> <input type="checkbox" id="88"> Had a threesome?
-                    </li><li> <input type="checkbox" id="89"> Attended an orgy?
-                    </li><li> <input type="checkbox" id="90"> Had two or more distinct acts of sexual intercourse with two or more people within 24 hours?
-                    </li><li> <input type="checkbox" id="91"> Had sexual intercourse with five or more partners?
-                    </li><li> <input type="checkbox" id="92"> Been photographed or filmed during sexual intercourse  by yourself or others?
-                    </li><li> <input type="checkbox" id="93"> Had period sex?
-                    </li><li> <input type="checkbox" id="94"> Had anal sex?
-                    </li><li> <input type="checkbox" id="95"> Had a pregnancy scare?
-                    </li><li> <input type="checkbox" id="96"> Impregnated someone or been impregnated?
-                    </li><li> <input type="checkbox" id="97"> Paid or been paid for a sexual act?
-                    </li><li> <input type="checkbox" id="98"> Committed an act of voyeurism?
-                    </li><li> <input type="checkbox" id="99"> Committed an act of incest?
-                    </li><li> <input type="checkbox" id="100"> Engaged in bestiality?
-                </li></ol>
+					<li><select id="1">
+						<option value="0">0</option>
+						<option value="16">1</option>
+						</select> Theft</li>
+					<li><select id="2">
+						<option value="0">0</option>
+						<option value="16">1</option>
+						</select> Vandalism with intention to cause damage to facilities/rooms/common areas</li>
+					<li><select id="3">
+						<option value="0">0</option>
+						<option value="16">1</option>
+						</select> Sexual Misconduct/Other serious Misconduct/Inappropriate behaviour/Breach of Law</li>
+					<li><select id="4">
+						<option value="0">0</option>
+						<option value="16">1</option>
+						</select> Subletting of room (with or without monetary consideration)</li>
+					<li><select id="5">
+						<option value="0">0</option>
+						<option value="16">1</option>
+						</select> Throwing of items from height ('Killer Litter')</li>
+					<li><select id="6">
+						<option value="0">0</option>
+						<option value="16">1</option>
+						</select> Use of opposite gender’s shower and toilet facilities, including such inappropriate use by visitor(s) of the resident</li>
+					<li><select id="7">
+						<option value="0">0</option>
+						<option value="16">1</option>
+						</select> Unauthorised room‐sharing (including overnight stay) with non-resident</li>
+					<li><select id="8">
+						<option value="0">0</option>
+						<option value="16">1</option>
+						</select> Duplication of key</li>
+					<li><select id="9">
+						<option value="0">0</option>
+						<option value="9">1</option>
+						<option value="9">2</option>
+						</select> Misconduct (including disorderly or disruptive behavior that interferes with the privacy, rights and well-being of other residents)</li>
+					<li><select id="10">
+						<option value="0">0</option>
+						<option value="9">1</option>
+						<option value="9">2</option>
+						</select> Activating fire alarm without reasonable cause</li>
+					<li><select id="11">
+						<option value="0">0</option>
+						<option value="9">1</option>
+						<option value="9">2</option>
+						</select> Passing of room transponder/key to another person</li>
+					<li><select id="12">
+						<option value="0">0</option>
+						<option value="9">1</option>
+						<option value="9">2</option>
+						</select> Tampering with communal security/safety measures (including fire‐exits, cluster/lift lobby doors, toilet doors and CCTVs)</li>
+					<li><select id="13">
+						<option value="0">0</option>
+						<option value="9">1</option>
+						<option value="9">2</option>
+						</select> Non-compliance with regulations, rules, policies, guidelines, codes of conduct or notices issued by the University or government authorities relating to health and safety</li>
+					<li><select id="14">
+						<option value="0">0</option>
+						<option value="9">1</option>
+						<option value="9">2</option>
+						</select> Solicitation, sale or promotion of any goods or services using the hostel premises without permission is prohibited li>
+					<li><select id="15">
+						<option value="0">0</option>
+						<option value="9">1</option>
+						<option value="9">2</option>
+						</select> Unauthorised removal of common furniture and fixture, appliances, food and personal items belonging to other residents</li>
+					<li><select id="16">
+						<option value="0">0</option>
+						<option value="9">1</option>
+						<option value="9">2</option>
+						</select> Smoking of cigarettes, using or possessing of imitation tobacco products (Vaporisers such as electronic cigarettes, electronic pipes, electronic cigars and the like, shisha, chewing tobacco, Heat-Not-Burn tobacco products etc) in room/Hostel compound</li>
+					<li><select id="17">
+						<option value="0">0</option>
+						<option value="9">1</option>
+						<option value="9">2</option>
+						</select> Alcohol possession or consumption in the hostel or disorderly conduct/drunkenness at the hostel</li>
+					<li><select id="18">
+						<option value="0">0</option>
+						<option value="9">1</option>
+						<option value="9">2</option>
+						</select> Visit by non-residents of the hostel during quiet hours</li>
+					<li><select id="19">
+						<option value="0">0</option>
+						<option value="9">1</option>
+						<option value="9">2</option>
+						</select> Leaving visitors unattended</li>
+                    <li><select id="20">
+						<option value="0">0</option>
+						<option value="6">1</option>
+						<option value="9">2</option>
+						<option value="9">3</option>
+						</select> Swapping room without authorisation</li>
+					<li><select id="21">
+						<option value="0">0</option>
+						<option value="6">1</option>
+						<option value="9">2</option>
+						<option value="9">3</option>
+						</select> Unauthorised stay-over in the room of another resident in the same hostel</li>
+					<li><select id="22">
+						<option value="0">0</option>
+						<option value="6">1</option>
+						<option value="9">2</option>
+						<option value="9">3</option>
+						</select> Excessive noise during quiet hours</li>
+					<li><select id="23">
+						<option value="0">0</option>
+						<option value="6">1</option>
+						<option value="9">2</option>
+						<option value="9">3</option>
+						</select> Obstruction and other potential fire hazards (e.g. usage of candles, open-flame)</li>
+					<li><select id="24">
+						<option value="0">0</option>
+						<option value="6">1</option>
+						<option value="9">2</option>
+						<option value="9">3</option>
+						</select> Possession or use of unauthorised electrical appliances, personal refrigerators or coolers/air-conditioners without permit from the Management Office.</li>
+					<li><select id="25">
+						<option value="0">0</option>
+						<option value="6">1</option>
+						<option value="9">2</option>
+						<option value="9">3</option>
+						</select> Leaving any personal mobility device (PMD) unattended when charging the PMD.</li>
+					<li><select id="26">
+						<option value="0">0</option>
+						<option value="3">1</option>
+						<option value="6">2</option>
+						<option value="6">3</option>
+						</select> Littering in Common Areas</li>
+					<li><select id="27">
+						<option value="0">0</option>
+						<option value="3">1</option>
+						<option value="6">2</option>
+						<option value="6">3</option>
+						</select> Failure to upkeep cleanliness of common areas/room</li>
+					<li><select id="28">
+						<option value="0">0</option>
+						<option value="3">1</option>
+						<option value="6">2</option>
+						<option value="6">3</option>
+						</select> Keeping of Pets</li>
+					<li><select id="29">
+						<option value="0">0</option>
+						<option value="3">1</option>
+						<option value="6">2</option>
+						<option value="6">3</option>
+						</select> Failure to shut or secure the fire‐exit door/cluster door</li>
+					<li><select id="30">
+						<option value="0">0</option>
+						<option value="3">1</option>
+						<option value="6">2</option>
+						<option value="6">3</option>
+						</select> Leaving lights/fans/appliances switched on when not in room</li>
+					<li><select id="31">
+						<option value="0">0</option>
+						<option value="6">1</option>
+						<option value="6">2</option>
+						<option value="6">3</option>
+						</select> Failure to meet requirements for health and temperature monitoring/declaration</li>
+					<li><select id="32">
+						<option value="0">0</option>
+						<option value="6">1</option>
+						<option value="6">2</option>
+						<option value="6">3</option>
+						</select> Not wearing a mask / wearing improperly</li>
+					<li><select id="33">
+						<option value="0">0</option>
+						<option value="6">1</option>
+						<option value="6">2</option>
+						<option value="6">3</option>
+						</select> Failure to observe social distancing</li>
+					<li><select id="34">
+						<option value="0">0</option>
+						<option value="6">1</option>
+						<option value="6">2</option>
+						<option value="6">3</option>
+						</select> Social gatherings of more than maximum number of persons permitted</li>
+					<li><select id="35">
+						<option value="0">0</option>
+						<option value="6">1</option>
+						<option value="6">2</option>
+						<option value="6">3</option>
+						</select> Allowing non-resident visitors (NUS or external) into hostel</li>
+					<li><select id="36">
+						<option value="0">0</option>
+						<option value="4">1</option>
+						<option value="4">2</option>
+						<option value="4">3</option>
+						</select> Trespassing into out-of-bound zone in hostel, including visiting or hosting visitors from another zone within the same hostel</li>
+					<li><select id="37">
+						<option value="0">0</option>
+						<option value="4">1</option>
+						<option value="4">2</option>
+						<option value="4">3</option>
+						</select> Failure to comply with specific zoning measures for hostel’s common facilities (student lounge, pantry etc)</li>
+				</ol>
 
                 <input class="button" id="submit" type="submit" value="Calculate My Score!">
                 <input class="button" id="reset" type="submit" value="Clear checkboxes">
