Fixed typo in option 14

--- a/Demerit Purity Test.html
+++ b/Demerit Purity Test.html
@@ -130,7 +130,7 @@
 						<option value="0">0</option>
 						<option value="9">1</option>
 						<option value="9">2</option>
-						</select> Solicitation, sale or promotion of any goods or services using the hostel premises without permission is prohibited li>
+						</select> Solicitation, sale or promotion of any goods or services using the hostel premises without permission is prohibited</li>
 					<li><select id="15">
 						<option value="0">0</option>
 						<option value="9">1</option>
